--- a/MixToolz.html
+++ b/MixToolz.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+#this is the autocomplete html structure!
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="MixToolz.css">
+
 </head>
 <body>
     
