--- a/MixToolz.html
+++ b/MixToolz.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-#this is the autocomplete html structure!
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="MixToolz.css">
-
-</head>
-<body>
+<html>
     
+<head>
+</head>
+
+<body>
+<img src= "Images/Demo5.jpg"width="50%" align="left">
+
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<div>
+  <center>
+  <p>
+    MixToolz is a set of useful tools edit pdf or images.
+
+  </center>
+</div>
+<br></br>
+
 </body>
 </html>
