--- a/MixToolz.html
+++ b/MixToolz.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-#this is the autocomplete html structure!
+<import js.pdf></import>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="MixToolz.css">
+    <title>Choose file</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="index.js"></script>
+    <script type="text/javascript" src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script type="text/javascript">
 
+        window.html2canvas = html2canvas;
+        window.jsPDF = window.jspdf.jsPDF;
+
+    </script>
+   
 </head>
 <body>
-    
+    <input type="file" id="imageInput" accept="image/*">
+    <button>Submit</button>
+
 </body>
 </html>
