--- a/MixToolz.html
+++ b/MixToolz.html
@@ -25,7 +25,7 @@
     <input type="file" id="imageInput" accept="image/*">
     <button>Submit</button>
 
-<img src= "Images/Demo5.jpg"width="50%" align="left">
+<img src= "MixTooLz Images\MixTooLz Logo.png" width="30%" align="left" margin="0px">
 
 <br></br>
 <br></br>
