--- a/MixToolz.html
+++ b/MixToolz.html
@@ -4,36 +4,14 @@
 <html>
     
 <head>
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Choose file</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="index.js"></script>
-    <script type="text/javascript" src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-    <script type="text/javascript">
-<<<<<<< HEAD
-=======
-
-        window.html2canvas = html2canvas;
-        window.jsPDF = window.jspdf.jsPDF;
-
-    </script>
-
->>>>>>> 1e3f86db33fd47ee9bf6ec44c977cfeeee22f7d8
-
-        window.html2canvas = html2canvas;
-        window.jsPDF = window.jspdf.jsPDF;
-
-    </script>
+  <title>MixTooLz</title>
+  <link rel="stylesheet" type="text/css" href="MixToolz.css">
    
 </head>
 
 <body>
-    <input type="file" id="imageInput" accept="image/*">
-    <button>Submit</button>
-
 <img src= "MixTooLz Images\MixTooLz Logo.png" width="30%" align="left" margin="0px">
+<script src="MixToolz.js"></script>
 
 <br></br>
 <br></br>
@@ -49,6 +27,5 @@
 </div>
 <br></br>
 
->>>>>>> 1e3f86db33fd47ee9bf6ec44c977cfeeee22f7d8
 </body>
 </html>
