--- a/MixToolz.html
+++ b/MixToolz.html
@@ -4,10 +4,11 @@
 <html>
   
 <head>
-  <title>MixTooLz</title>
-  <link rel="stylesheet" type="text/css" href="MixToolz.css">
+
+<title>MixTooLz</title>
+<link rel="stylesheet" type="text/css" href="MixToolz.css">
    
-  <script>
+<script>
     var coll = document.getElementsByClassName("collapsible");
     var i;
     
@@ -22,11 +23,17 @@
         } 
       });
     }
-      </script>
+</script>
+
 </head>
 
 <body>
-<img src= "MixTooLz Images\MixTooLz Logo.png" width="30%" align="left" margin="0px">
+  <img src= "MixTooLz Images\MixTooLz Logo.png" width="30%" align="left" margin="0px">
+  <button class="collapsible">Tools</button>
+  <div class="content1">
+    <h4><li>Comparison</a></li></h4>
+    <h4><li>Most searched and frequently asked questions</a></li></h4>
+  </div>
 <script src="MixToolz.js"></script>
 
 <br></br>
