--- a/MixToolz.html
+++ b/MixToolz.html
@@ -36,22 +36,7 @@
 <br></br>
 
 <!--NEED TO IMPLIMENT IN JS idk how yet-->
-<script>
-  var coll = document.getElementsByClassName("collapsible");
-  var i;
-  
-  for (i = 0; i < coll.length; i++) {
-    coll[i].addEventListener("click", function() {
-      this.classList.toggle("active");
-      var content = this.nextElementSibling;
-      if (content.style.maxHeight){
-        content.style.maxHeight = null;
-      } else {
-        content.style.maxHeight = content.scrollHeight + "px";
-      } 
-    });
-  }
-  </script>
+<script src="MixToolz.js"></script>
 
 </body>
 </html>
