--- a/MixToolz.html
+++ b/MixToolz.html
@@ -4,14 +4,21 @@
 <html>
   
 <head>
-  <title>MixTooLz</title>
-  <link rel="stylesheet" type="text/css" href="MixToolz.css">
-   
+
+<title>MixTooLz</title>
+<link rel="stylesheet" type="text/css" href="MixToolz.css">
+
 </head>
 
 <body>
-<img src= "MixTooLz Images\MixTooLz Logo.png" width="30%" align="left" margin="0px">
-<script src="MixToolz.js"></script>
+  <img src= "MixTooLz Images\MixTooLz Logo.png" width="30%" align="left" margin="0px">
+
+  <div align="right">
+    <button type="button" class="collapsible" >Tools</button>
+      <div class="content1">
+        <h4><li>Tools...</a></li></h4>
+      </div>
+  </div>
 
 <br></br>
 <br></br>
@@ -25,7 +32,12 @@
 
   </center>
 </div>
+
 <br></br>
+
+<!--NEED TO IMPLIMENT IN JS idk how yet-->
+<!--nvm can ald-->
+<script src="MixToolz.js"></script>
 
 </body>
 </html>
