--- a/MixToolz.html
+++ b/MixToolz.html
@@ -15,8 +15,21 @@
 
   <div align="right">
     <button type="button" class="collapsible" >Tools</button>
+    
       <div class="content1">
+
+        <!--Adding buttons to the navigation bar in home page-->
+        <button type="button" onclick="location.href='MixToolz.html'"">
+        Home 
+        </button>
+
+        <button type="button" onclick="location.href='editpdf.html'"">
+        Edit PDF
+        </button>
+
+
         <h4><li>Tools...</a></li></h4>
+
       </div>
   </div>
 
@@ -26,6 +39,8 @@
 <br></br>
 <br></br>
 <div>
+
+      
   <center>
   <p>
     MixToolz is a set of useful tools edit pdf or images.
