27/4 demo1 drawing function

--- a/MixToolz.html
+++ b/MixToolz.html
@@ -19,11 +19,11 @@
       <div class="content1">
 
         <!--Adding buttons to the navigation bar in home page-->
-        <button type="button" onclick="location.href='MixToolz.html'"">
+        <button type="button" onclick="location.href='MixToolz.html'">
         Home 
         </button>
 
-        <button type="button" onclick="location.href='editpdf.html'"">
+        <button type="button" onclick="location.href='editpdf.html'">
         Edit PDF
         </button>
 
