27/4 added logo in every page

--- a/MixToolz.html
+++ b/MixToolz.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <img src= "MixTooLz Images\MixTooLz Logo.png" width="30%" align="left" margin="0px">
+  <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px">
 
   <div align="right">
     <button type="button" class="collapsible" >Tools</button>
