--- a/editpdf.html
+++ b/editpdf.html
@@ -13,6 +13,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
+    <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px">
+    
     <div class="container">
       <h2>Edit PDF</h2>
      <form action="/">
