--- a/draw.html
+++ b/draw.html
@@ -12,18 +12,16 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <body>
-        <div class="paint">
+        <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px">
+        <div class="wall">
             <form action="/">
                 <div id="paper"></div>
-                <div class="ink">
+                <div class="poster">
                     <h2>Import your image here</h2>
                     <label for="input-file">Import Image</label>
                     <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">                                      
                 </div>
-            </form>
-            <div class="board">
-                <canvas id="canvas" width="300px" height="400px"></canvas>  
-            </div>          
+            </form>        
         </div>
         <script
         src="https://code.jquery.com/jquery-3.6.0.min.js"
