--- a/MixToolz.html
+++ b/MixToolz.html
@@ -14,16 +14,17 @@
   <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px">
 
   <div align="right">
-    <button type="button" class="collapsible" >Tools</button>
+    <button type="button" class="collapsible">
+      <img id="edit" src="MixTooLz Images/Edit.png">Edit Tools</button>
     
       <div class="content1">
 
         <!--Adding buttons to the navigation bar in home page-->
-        <button type="button" onclick="location.href='MixToolz.html'">
+        <button type="button" onclick="location.href='MixToolz.html'" id="home">
         Home 
         </button>
 
-        <button type="button" onclick="location.href='editpdf.html'">
+        <button type="button" onclick="location.href='editpdf.html'" id="pdf">
         Edit PDF
         </button>
 
