--- a/draw.html
+++ b/draw.html
@@ -19,8 +19,9 @@
                 <div class="poster">
                     <h2>Import your image here</h2>
                     <label for="input-file">Import Image</label>
-                    <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">                                      
+                    <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">                                                          
                 </div>
+                <canvas id="drawing-board"></canvas>
             </form>        
         </div>
         <script
