--- a/MixToolz.html
+++ b/MixToolz.html
@@ -39,20 +39,23 @@
 <br></br>
 <br></br>
 <br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
 <div>
 
       
   <center>
   <p>
-    MixToolz is a set of useful tools edit pdf or images.
+    Set of useful tools to edit pdf or images.
 
   </center>
 </div>
 
 <br></br>
 
-<!--NEED TO IMPLIMENT IN JS idk how yet-->
-<!--nvm can ald-->
+
 <script src="MixToolz.js"></script>
 
 </body>
