--- a/MixToolz.html
+++ b/MixToolz.html
@@ -15,7 +15,7 @@
 
   <div align="right">
     <button type="button" class="collapsible">
-      <img id="edit" src="MixTooLz Images/Edit.png">Edit Tools</button>
+      <img id="edit" src="MixTooLz Images/Edit.png">Tools</button>
     
       <div class="content1">
 
@@ -34,7 +34,6 @@
       </div>
   </div>
 
-<br></br>
 <br></br>
 <br></br>
 <br></br>
