--- a/draw.html
+++ b/draw.html
@@ -8,7 +8,11 @@
         rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
         />
-        <link rel="stylesheet" type="text/css" href="MixToolz.css">
+        <link 
+        href="https://unpkg.com/react-image-crop/dist/ReactCrop.css" 
+        rel="stylesheet"
+        />  
+      <link rel="stylesheet" type="text/css" href="MixToolz.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <body>
@@ -29,6 +33,7 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous"
       ></script>
+      <script src="https://unpkg.com/react-image-crop/dist/index.umd.cjs"></script>
 
     <script src="MixToolz.js">
     </script>
