--- a/MixToolz.html
+++ b/MixToolz.html
@@ -28,8 +28,17 @@
         Edit PDF
         </button>
 
+        <button type="button" onclick="location.href='editpdf.html'" id="pdf">
+        Merge PDF
+        </button>
 
-        <h4><li>Tools...</a></li></h4>
+        <button type="button" onclick="location.href='editpdf.html'" id="pdf">
+        Draw
+        </button>
+
+
+
+
 
       </div>
   </div>
