--- a/MixToolz.html
+++ b/MixToolz.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px">
+  <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px" onclick="location.href='MixToolz.html'">
 
   <div align="right">
     <button type="button" class="collapsible">
@@ -57,7 +57,8 @@
   <center>
   <p>
     Set of useful tools to edit pdf or images.
-
+    <br></br>
+    --Crop--Draw--Merge--
   </center>
 </div>
 
