--- a/editpdf.html
+++ b/editpdf.html
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px">
+    <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px" onclick="location.href='MixToolz.html'">
     
     <div class="container">
      <form action="/">
