--- a/crop.html
+++ b/crop.html
@@ -5,6 +5,10 @@
         <title>Crop</title>
         <link rel="stylesheet" type="text/css" href="MixToolz.css">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.min.css">
     </head>
     <body>
         <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px">
@@ -18,9 +22,10 @@
                     <img id="preview-image">
                 </div>
             </div>
+            <center><h2>Import your image here</h2></center>
             <input type="file" id="file" accept="image/jpg, image/png, image/jpeg">
             <label for="file">Import Image</label>
-            <div class="aspect-ratio">
+            <div class="aspect-ratio hide">
                 <span>Aspect Ratio</span>
                 <li>16:9</li>
                 <li>5:4</li>
@@ -33,5 +38,7 @@
                 <a href="" id="download" class="hide">Download</a>
             </div>
         </div>
+        </script>
+        <script src="MixToolz.js"></script>
     </body>
 </html>
