--- a/MixToolz.html
+++ b/MixToolz.html
@@ -33,10 +33,14 @@
         </button>
 
         <button type="button" onclick="location.href='editpdf.html'" id="pdf">
+        <img id="icon" src="MixTooLz Images/Draw.png">
         Draw
         </button>
 
-
+        <button type="button" onclick="location.href='crop.html'" id="pdf">
+        <img id="icon" src="MixTooLz Images/Crop.png">
+        Crop
+        </button>
 
 
 
