--- a/crop.html
+++ b/crop.html
@@ -28,11 +28,11 @@
                 Edit PDF
                 </button>
         
-                <button type="button" onclick="location.href='editpdf.html'" id="pdf">
+                <button type="button" onclick="location.href='mergepdf.html'" id="pdf">
                 Merge PDF
                 </button>
         
-                <button type="button" onclick="location.href='editpdf.html'" id="pdf">
+                <button type="button" onclick="location.href='draw.html'" id="pdf">
                 <img id="icon" src="MixTooLz Images/Draw.png">
                 Draw
                 </button>
