--- a/editpdf.html
+++ b/editpdf.html
@@ -30,7 +30,7 @@
           Edit PDF
           </button>
   
-          <button type="button" onclick="location.href='editpdf.html'" id="pdf">
+          <button type="button" onclick="location.href='mergepdf.html'" id="pdf">
           Merge PDF
           </button>
   
@@ -96,5 +96,6 @@
     </script>
 
     <script src="/editpdf.js"></script>
+    <script src="MixToolz.js"></script>
   </body>
 </html>
