--- a/editpdf.html
+++ b/editpdf.html
@@ -26,20 +26,20 @@
           Home 
           </button>
   
-          <button type="button" onclick="location.href='editpdf.html'" id="pdf">
+          <button type="button" onclick="location.href='editpdf.html'" id="blocks">
           Edit PDF
           </button>
   
-          <button type="button" onclick="location.href='mergepdf.html'" id="pdf">
+          <button type="button" onclick="location.href='mergepdf.html'" id="blocks">
           Merge PDF
           </button>
   
-          <button type="button" onclick="location.href='draw.html'" id="pdf">
+          <button type="button" onclick="location.href='draw.html'" id="blocks">
           <img id="icon" src="MixTooLz Images/Draw.png">
           Draw
           </button>
   
-          <button type="button" onclick="location.href='crop.html'" id="pdf">
+          <button type="button" onclick="location.href='crop.html'" id="blocks">
           <img id="icon" src="MixTooLz Images/Crop.png">
           Crop
           </button>
