--- a/mergepdf.html
+++ b/mergepdf.html
@@ -24,23 +24,42 @@
         Home 
         </button>
 
-        <button type="button" onclick="location.href='editpdf.html'" id="pdf">
+        <button type="button" onclick="location.href='editpdf.html'" id="blocks">
         Edit PDF
         </button>
 
-        <button type="button" onclick="location.href='mergepdf.html'" id="pdf">
+        <button type="button" onclick="location.href='mergepdf.html'" id="blocks">
         Merge PDF
         </button>
 
-        <button type="button" onclick="location.href='draw.html'" id="pdf">
+        <button type="button" onclick="location.href='draw.html'" id="blocks">
         <img id="icon" src="MixTooLz Images/Draw.png">
         Draw
         </button>
 
-        <button type="button" onclick="location.href='crop.html'" id="pdf">
+        <button type="button" onclick="location.href='crop.html'" id="blocks">
         <img id="icon" src="MixTooLz Images/Crop.png">
         Crop
         </button>
+      
+    </div>
+  </div>
+  
+<iframe id="pdf" style="width: 100%; height: 1000px;"></iframe>
 
+</body>
 
 <script src="MixToolz.js"></script>
+<script src="https://unpkg.com/pdf-lib"></script>
+
+<script>
+  createPdf();
+  async function createPdf() {
+    const pdfDoc = await PDFLib.PDFDocument.create();
+    const page = pdfDoc.addPage([350, 400]);
+    page.moveTo(110, 200);
+    page.drawText('Hello World!');
+    const pdfDataUri = await pdfDoc.saveAsBase64({ dataUri: true });
+    document.getElementById('pdf').src = pdfDataUri;
+  }
+</script>
