--- a/mergepdf.html
+++ b/mergepdf.html
@@ -29,6 +29,7 @@
         </button>
 
         <button type="button" onclick="location.href='mergepdf.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/Merge(beta).png">
         Merge PDF
         </button>
 
