--- a/editpdf.html
+++ b/editpdf.html
@@ -44,6 +44,8 @@
           <img id="icon" src="MixTooLz Images/Crop.png">
           Crop
           </button>
+        </div>
+    </div>
     
     <div class="container">
      <form action="/">
