--- a/mergepdf.html
+++ b/mergepdf.html
@@ -45,22 +45,24 @@
       
     </div>
   </div>
-  
-<iframe id="pdf" style="width: 100%; height: 1000px;"></iframe>
 
+  <div class="wall" align="center">
+    <form action="/">
+        <div id="paper"></div>
+          <div class="poster">
+              <h2>Import pdfs to merge</h2>
+              <label onclick="selectPDFs()" for="file1">pdf 1</label>
+              <input type="file" id="file1" accept=".pdf">                                    
+              <label onclick="selectPDFs()" for="file2">pdf 2</label>
+              <input type="file" id="file2" accept=".pdf">
+              <label onclick="mergePDFs()">Merge PDFs</label>
+              <a id="downloadLink" href="#" style="display:none">Download Merged PDF</a>
+
+
+          </div>
+        </div>
 </body>
 
 <script src="MixToolz.js"></script>
+<script src="mergepdf.js"></script>
 <script src="https://unpkg.com/pdf-lib"></script>
-
-<script>
-  createPdf();
-  async function createPdf() {
-    const pdfDoc = await PDFLib.PDFDocument.create();
-    const page = pdfDoc.addPage([350, 400]);
-    page.moveTo(110, 200);
-    page.drawText('Hello World!');
-    const pdfDataUri = await pdfDoc.saveAsBase64({ dataUri: true });
-    document.getElementById('pdf').src = pdfDataUri;
-  }
-</script>
