border for the image

--- a/editpdf.html
+++ b/editpdf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bootstrap Example</title>
+    <title>Edit PDF</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -14,6 +14,7 @@
   </head>
   <body>
     <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px" onclick="location.href='MixToolz.html'">
+    
 
     <div align="right">
       <button type="button" class="collapsible">
@@ -46,6 +47,9 @@
           </button>
         </div>
     </div>
+
+    <br></br>
+    <br></br>
     
     <div class="container">
      <form action="/">
