--- a/draw.html
+++ b/draw.html
@@ -25,7 +25,7 @@
               <div class="content1">
         
                 <!--Adding buttons to the navigation bar in home page-->
-                <button type="button" onclick="location.href='MixToolz.html'" id="home">
+                <button type="button" onclick="location.href='MixToolz.html'" id="blocks">
                 Home 
                 </button>
         
