--- a/MixToolz.html
+++ b/MixToolz.html
@@ -15,7 +15,7 @@
 
   <div align="right">
     <button type="button" class="collapsible">
-      <img id="edit" src="MixTooLz Images/Edit.png">Tools</button>
+      <img id="menubar" src="MixTooLz Images/Edit.png">Tools</button>
     
       <div class="content1">
 
@@ -48,9 +48,12 @@
       </div>
   </div>
 
+<br></br>
+<br></br>
+<br></br>
+
 <div>
 
-      
   <center>
   <p>
     Set of useful tools to edit pdf or images.
