--- a/mergepdf.html
+++ b/mergepdf.html
@@ -15,7 +15,7 @@
 
   <div align="right">
     <button type="button" class="collapsible">
-      <img id="edit" src="MixTooLz Images/Edit.png">Tools</button>
+      <img id="menubar" src="MixTooLz Images/Edit.png">Tools</button>
     
       <div class="content1">
 
@@ -45,6 +45,10 @@
       
     </div>
   </div>
+
+<br></br>
+<br></br>
+<br></br>
 
   <div class="wall" align="center">
     <form action="/">
