--- a/draw.html
+++ b/draw.html
@@ -20,7 +20,7 @@
 
         <div align="right">
             <button type="button" class="collapsible">
-              <img id="edit" src="MixTooLz Images/Edit.png">Tools</button>
+              <img id="menubar" src="MixTooLz Images/Edit.png">Tools</button>
             
               <div class="content1">
         
