--- a/MixToolz.html
+++ b/MixToolz.html
@@ -56,9 +56,7 @@
 
   <center>
   <p>
-    Set of useful tools to edit pdf or images.
-    <br></br>
-    --Crop--Draw--Merge--
+    Set of useful tools that processes PDF documents or edit images on your own browser.
   </center>
 </div>
 
