--- a/editpdf.html
+++ b/editpdf.html
@@ -30,9 +30,14 @@
           <button type="button" onclick="location.href='editpdf.html'" id="blocks">
           Edit PDF
           </button>
+
+          <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
+          <img id="icon" src="MixTooLz Images/Separate.png">
+          Separate PDF
+          </button>
   
           <button type="button" onclick="location.href='mergepdf.html'" id="blocks">
-          <img id="icon" src="MixTooLz Images/Merge(beta).png">
+          <img id="icon" src="MixTooLz Images/Merge.png">
           Merge PDF
           </button>
   
