--- a/mergepdf.html
+++ b/mergepdf.html
@@ -28,8 +28,13 @@
         Edit PDF
         </button>
 
+        <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/Separate.png">
+        Separate PDF
+        </button>
+
         <button type="button" onclick="location.href='mergepdf.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Merge(beta).png">
+        <img id="icon" src="MixTooLz Images/Merge.png">
         Merge PDF
         </button>
 
@@ -55,10 +60,13 @@
         <div id="paper"></div>
           <div class="poster">
               <h2>Import pdfs to merge</h2>
-              <label onclick="selectPDFs()" for="file1">pdf 1</label>
-              <input type="file" id="file1" accept=".pdf">                                    
-              <label onclick="selectPDFs()" for="file2">pdf 2</label>
+
+              <label for="file1">pdf 1</label>
+              <input type="file" id="file1" accept=".pdf">        
+
+              <label for="file2">pdf 2</label>
               <input type="file" id="file2" accept=".pdf">
+              
               <label onclick="mergePDFs()">Merge PDFs</label>
               <a id="downloadLink" href="#" style="display:none">Download Merged PDF</a>
 
