--- a/MixToolz.html
+++ b/MixToolz.html
@@ -8,6 +8,7 @@
 <title>MixTooLz</title>
 <link rel="stylesheet" type="text/css" href="MixToolz.css">
 
+
 </head>
 
 <body>
@@ -24,7 +25,7 @@
         Home 
         </button>
 
-        <button type="button" onclick="location.href='editpdf.html'" id="blocks">
+        <button type="button" onclick="location.href='convertfile2pdf.html'" id="blocks">
         Edit PDF
         </button>
 
@@ -66,6 +67,7 @@
 </div>
 
 <br></br>
+
 
 
 <script src="MixToolz.js"></script>
