--- a/separatepdf.html
+++ b/separatepdf.html
@@ -24,7 +24,7 @@
         Home 
         </button>
 
-        <button type="button" onclick="location.href='editpdf.html'" id="blocks">
+        <button type="button" onclick="location.href='convertfile2pdf.html'" id="blocks">
         Edit PDF
         </button>
 
