12/5 draw function success

--- a/draw.html
+++ b/draw.html
@@ -61,14 +61,13 @@
                     <h2>Import your image here</h2>
                     <label for="input-file">Import Image</label>
                     <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
-                    <canvas id="canvas"></canvas>                                                          
-                </div>
-                
+                    <canvas id="canvas" width="400" height="400"></canvas>                                                          
+                </div>                
             </form>        
         </div>
 
-    <script src="MixToolz.js">
-    </script>
+    <script src="MixToolz.js"></script>
+    
     </body>
     </head>
 </html>
