--- a/draw.html
+++ b/draw.html
@@ -66,7 +66,7 @@
             </form>        
         </div>
 
-    <script src="MixToolz.js"></script>
+    <script src="draw.js"></script>
     
     </body>
     </head>
