--- a/draw.html
+++ b/draw.html
@@ -9,7 +9,7 @@
         
       <link rel="stylesheet" type="text/css" href="MixToolz.css">
     <body>
-        <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px">
+        <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px" onclick="location.href='MixToolz.html'">
 
         <div align="right">
             <button type="button" class="collapsible">
@@ -61,8 +61,8 @@
                     <h2>Import your image here</h2>
                     <label for="input-file">Import Image</label>
                     <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
-                    <canvas id="canvas" width="400" height="400"></canvas>                                                          
-                </div>                
+                    <canvas id="canvas"></canvas>                                     
+                </div>                                
             </form>        
         </div>
 
