image to PDF progress

--- a/mergepdf.html
+++ b/mergepdf.html
@@ -24,8 +24,8 @@
         Home 
         </button>
 
-        <button type="button" onclick="location.href='editpdf.html'" id="blocks">
-        Edit PDF
+        <button type="button" onclick="location.href='convertfile2pdf.html'" id="blocks">
+        Convert PDF
         </button>
 
         <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
