--- a/separatepdf.html
+++ b/separatepdf.html
@@ -25,7 +25,7 @@
         </button>
 
         <button type="button" onclick="location.href='convertfile2pdf.html'" id="blocks">
-        Edit PDF
+        Convert PDF
         </button>
 
         <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
