--- a/crop.html
+++ b/crop.html
@@ -83,5 +83,6 @@
             </div>
             </script>
             <script src="MixToolz.js"></script>
+            <script src="crop.js"></script>
         </body>
     </html>
