progress for converting img to pdf

--- a/crop.html
+++ b/crop.html
@@ -67,7 +67,7 @@
                 </div>
                 <center><h2>Import your image here</h2></center>
                 <input type="file" id="file" accept="image/jpg, image/png, image/jpeg">
-                <label for="file">Import Image</label>
+                <label class="button-87"for="file">Import Image</label>
                 <div class="aspect-ratio hide">
                     <span>Aspect Ratio</span>
                     <li>16:9</li>
