--- a/mergepdf.html
+++ b/mergepdf.html
@@ -67,7 +67,7 @@
               <label for="file2">pdf 2</label>
               <input type="file" id="file2" accept=".pdf">
               
-              <label onclick="mergePDFs()">Merge PDFs</label>
+              <label class="button-87" onclick="mergePDFs()">Merge PDFs</label>
               <a id="downloadLink" href="#" style="display:none">Download Merged PDF</a>
 
 
