--- a/separatepdf.html
+++ b/separatepdf.html
@@ -64,7 +64,7 @@
                 <label for="file">pdf</label>
                 <input type="file" id="file" accept=".pdf"><br>
 
-                <label onclick="separatePDF()">Separate PDF</label>
+                <label class="button-87" onclick="separatePDF()">Separate PDF</label>
                 <div id="output"></div>
               
             </div>
