--- a/draw.html
+++ b/draw.html
@@ -60,7 +60,7 @@
           <h2>Import your image here</h2>
           <label for="input-file">Import Image</label>
           <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
-          <canvas id="canvas"></canvas>  
+          <canvas id="canvas" width="0" height="0"></canvas>  
           <div class="tools hide">
             <label class="title">Line Width :</label>
             <ul class="options">
@@ -69,7 +69,7 @@
               </li>
             <label class="warna">Colors :</label>
             <ul class="options">
-              <li class="option selected"></li>
+              <li class="option"></li>
               <li class="option"></li>
               <li class="option"></li>
               <li class="option"></li>
@@ -78,6 +78,12 @@
                 <input type="color" id="color-picker" value="#4A98F7">
               </li>
             </ul>
+            <div>
+            <li class="clean">
+              <img src="MixTooLz Images/Clean.png" id="tool_icon">
+              <span>Clear</span>
+            </li>
+            </div>
           </div>
           <div class="btn">
             <a href="" id="download" class="hide">Download</a>
