--- a/crop.html
+++ b/crop.html
@@ -21,10 +21,12 @@
         
                 <!--Adding buttons to the navigation bar in home page-->
                 <button type="button" onclick="location.href='MixToolz.html'" id="blocks">
+                <img id="icon" src="MixTooLz Images/Home.png">
                 Home 
                 </button>
         
                 <button type="button" onclick="location.href='convertfile2pdf.html'" id="blocks">
+                <img id="icon" src="MixTooLz Images/Convertpdf.png">
                 Convert PDF
                 </button>
 
