--- a/draw.html
+++ b/draw.html
@@ -19,10 +19,12 @@
         
                 <!--Adding buttons to the navigation bar in home page-->
                 <button type="button" onclick="location.href='MixToolz.html'" id="blocks">
+                <img id="icon" src="MixTooLz Images/Home.png">
                 Home 
                 </button>
         
                 <button type="button" onclick="location.href='convertfile2pdf.html'" id="blocks">
+                <img id="icon" src="MixTooLz Images/Convertpdf.png">
                 Convert PDF
                 </button>
 
@@ -80,7 +82,7 @@
             </ul>
             <div>
             <li class="clean">
-              <img src="MixTooLz Images/Clean.png" id="tool_icon">
+              <img src="MixTooLz Images/Clean.png" id="icon">
               <span>Clear</span>
             </li>
             </div>
