--- a/MixToolz.html
+++ b/MixToolz.html
@@ -63,7 +63,7 @@
 <div>
 
   <center>
-  <p>
+  <p class="button-87">
     Set of useful tools that processes PDF documents or edit images on your own browser.
   </center>
 </div>
