--- a/text.html
+++ b/text.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themws/smoothness/jquery-ui.css" rel="stylesheet" type="text/css/">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-        <title>Draw</title>
+        <title>Text-to-Image</title>
         
       <link rel="stylesheet" type="text/css" href="MixToolz.css">
+    </head>
     <body>
         <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px" onclick="location.href='MixToolz.html'">
 
@@ -57,48 +56,40 @@
 <br></br>
 
         <div class="wall" align="center">
-          <div id="paper">
-          <div class="poster">
+            <div id="paper">
+            <div class="poster">
             <div>
-              <img id="image">
+                <img id="image">
             </div>
-          <h2>Import your image here</h2>
-          <label for="input-file">Import Image</label>
-          <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
-          <canvas id="canvas" width="0" height="0"></canvas>
-          <div class="tools hide">
-            <label class="title">Line Width :</label>
-            <ul class="options">
-              <li class="slider">
-                <input type="range" id="size" min="1" max="30" value="5">
-              </li>
-            <label class="warna">Colors :</label>
-            <ul class="options">
-              <li class="option"></li>
-              <li class="option"></li>
-              <li class="option"></li>
-              <li class="option"></li>
-              <li class="option"></li>
-              <li class="option">
-                <input type="color" id="color-picker" value="#4A98F7">
-              </li>
-            </ul>
-            <div>
-            <li class="clean">
-              <img src="MixTooLz Images/Clean.png" id="icon">
-              <span>Clear</span>
-            </li>
-            </div>
-          </div>
-          <div class="btn">
-            <a href="" id="download" class="hide">Download</a>
-          </div>                                   
-          </div>                                          
-        </div>
+            <h2>Import your image here</h2>
+            <label for="input-file">Import Image</label>
+            <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
+            <canvas id="canvas" width="0" height="0"></canvas>
 
-    <script src="MixToolz.js"></script>
-    <script src="draw.js"></script>
-    
+            <div class="tools hide">
+                <ul class="options">
+                    <li class="text_option">
+                        <span id="text-btn">Text</span>
+                        <textarea id="text" placeholder="Enter text to add" row="5" cols="50"></textarea>
+                    </li>
+                </ul>
+                <ul class="options">
+                    <li class="option"></li>
+                    <li class="option"></li>
+                    <li class="option"></li>
+                    <li class="option"></li>
+                    <li class="option"></li>
+                    <li class="option">
+                      <input type="color" id="color-picker" value="#4A98F7">
+                    </li>
+                </ul>
+            </div>
+
+            <div class="btn">
+                <a href="" id="download" class="hide">Download</a>
+            </div>
+
+        <script src="MixToolz.js"></script>
+        <script src="text.js"></script>
     </body>
-    </head>
 </html>
