--- a/text.html
+++ b/text.html
@@ -69,7 +69,7 @@
             <div class="tools hide">
                 <ul class="options">
                     <li class="text_option">
-                        <span id="text-btn">Text</span>
+                        <span id="text-btn">Add Text</span>
                         <textarea id="text" placeholder="Enter text to add" row="5" cols="50"></textarea>
                     </li>
                 </ul>
