--- a/draw.html
+++ b/draw.html
@@ -63,7 +63,7 @@
               <img id="image">
             </div>
           <h2>Import your image here</h2>
-          <label for="input-file">Import Image</label>
+          <label class="button-87" for="input-file">Import Image</label>
           <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
           <canvas id="canvas" width="0" height="0"></canvas>
           <div class="tools hide">
