--- a/convertfile2pdf.html
+++ b/convertfile2pdf.html
@@ -48,6 +48,11 @@
           <img id="icon" src="MixTooLz Images/Draw.png">
           Draw
           </button>
+
+          <button type="button" onclick="location.href='text.html'" id="blocks">
+          <img id="icon" src="MixTooLz Images/Text.png">
+          Text
+          </button>
   
           <button type="button" onclick="location.href='crop.html'" id="blocks">
           <img id="icon" src="MixTooLz Images/Crop.png">
