--- a/crop.html
+++ b/crop.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.min.css">
     </head>
     <body>
-        <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px">
+        <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px" onclick="location.href='MixToolz.html'">
 
         <div align="right">
             <button type="button" class="collapsible">
@@ -43,6 +43,11 @@
                 <button type="button" onclick="location.href='draw.html'" id="blocks">
                 <img id="icon" src="MixTooLz Images/Draw.png">
                 Draw
+                </button>
+
+                <button type="button" onclick="location.href='text.html'" id="blocks">
+                <img id="icon" src="MixTooLz Images/Text.png">
+                Text
                 </button>
         
                 <button type="button" onclick="location.href='crop.html'" id="blocks">
