--- a/separatepdf.html
+++ b/separatepdf.html
@@ -45,6 +45,11 @@
         Draw
         </button>
 
+        <button type="button" onclick="location.href='text.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/Text.png">
+        Text
+        </button>
+
         <button type="button" onclick="location.href='crop.html'" id="blocks">
         <img id="icon" src="MixTooLz Images/Crop.png">
         Crop
