--- a/separatepdf.html
+++ b/separatepdf.html
@@ -72,7 +72,7 @@
                 <input type="file" id="fileInput" accept=".pdf"><br>
 
                 <h2>Enter Pages to Extract</h2>
-                <textarea id="pages" rows="4" cols="50" placeholder="Enter text"></textarea>
+                <textarea id="pages" rows="4" cols="50" placeholder="Enter pages to be separated (e.g. 1,3,5)"></textarea>
 
                 <label class="button-87" onclick="separatePDF()">separate PDF</label><br>
                 <a id="downloadLink" href="#" style="display:none">Download Separated PDF</a>
