--- a/mergepdf.html
+++ b/mergepdf.html
@@ -54,6 +54,11 @@
         <img id="icon" src="MixTooLz Images/Crop.png">
         Crop
         </button>
+
+        <button type="button" onclick="location.href='imgConvert.html'" id="blocks">
+        <img id="icon" src="">
+        Image Convert
+        </button>
       
     </div>
   </div>
