--- a/mergepdf.html
+++ b/mergepdf.html
@@ -73,7 +73,8 @@
 
               <label for="file2">pdf 2</label>
               <input type="file" id="file2" accept=".pdf">
-              
+
+              <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
               <label class="button-87" onclick="mergePDFs()">Merge PDFs</label>
               <a id="downloadLink" href="#" style="display:none">Download Merged PDF</a>
 
