--- a/draw.html
+++ b/draw.html
@@ -57,7 +57,7 @@
           </button>
 
           <button type="button" onclick="location.href='imgConvert.html'" id="blocks">
-          <img id="icon" src="">
+          <img id="icon" src="MixTooLz Images/img_converter.png">
           Image Convert
           </button>
         </div>
@@ -76,13 +76,15 @@
           <label class="button-87" for="input-file">Import Image</label>
           <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
           <canvas id="canvas" width="0" height="0"></canvas>
+          
           <div class="tools hide">
-            <label class="title">Line Width :</label>
+            <span class="title">Line Width :</span>
             <ul class="options">
               <li class="slider">
                 <input type="range" id="size" min="1" max="30" value="5">
               </li>
-            <label class="warna">Colors :</label>
+            </ul>
+            <span class="title">Colors :</span>
             <ul class="options">
               <li class="option"></li>
               <li class="option"></li>
