--- a/crop.html
+++ b/crop.html
@@ -88,6 +88,8 @@
                     <li>1:1</li>
                     <li>Custom</li>
                 </div>
+                
+                <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
                 <div class="btn">
                     <button id="preview" class="hide">Preview</button>
                     <a href="" id="download" class="hide">Download</a>
