--- a/draw.html
+++ b/draw.html
@@ -102,6 +102,9 @@
             </li>
             </div>
           </div>
+
+          <textarea id="filename" class="hide" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
+          
           <div class="btn">
             <a href="" id="download" class="hide">Download</a>
           </div>                                   
