--- a/MixToolz.html
+++ b/MixToolz.html
@@ -66,13 +66,17 @@
 <br></br>
 <br></br>
 <br></br>
+<br></br>
 
-<div>
+<div align="middle">
 
-  <center>
-  <p>
-    Set of useful tools that processes PDF documents or edit images on your own browser.
-  </center>
+  <p class="button-87">
+  Set of useful tools that processes 
+  <br>
+  PDF documents or edit images 
+  <br>
+  on your own browser.
+
 </div>
 
 <br></br>
